<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->
    <string name="upcoming_elections_title">Upcoming Elections</string>
    <string name="saved_elections_title">Saved Elections</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="elections">Elections</string>
    <string name="representatives">Representatives</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">Use my location</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="twitter_icon">Twitter icon</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="www_icon">World wide web icon</string>
    <string name="political_figure_image">Political figure image</string>

</resources>
