<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />

    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingVertical="20dp"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:contentDescription="@string/political_figure_image"
            android:id="@+id/representativePhoto"
            android:layout_width="70dp"
            android:layout_height="70dp"
            profileImage="@{representative.official.photoUrl}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_profile" />


        <TextView
            android:id="@+id/office_name"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{representative.office.name}"
            app:layout_constraintBottom_toTopOf="@+id/politician_name"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="President of the United States" />

        <TextView
            android:id="@+id/politician_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Donald Trump"
            android:text="@{representative.official.name}"
            app:layout_constraintBottom_toTopOf="@+id/party"
            app:layout_constraintStart_toStartOf="@+id/office_name"
            app:layout_constraintTop_toBottomOf="@+id/office_name" />

        <TextView
            android:id="@+id/party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{representative.official.party}"
            tools:text="Republican Party"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/politician_name"
            app:layout_constraintTop_toBottomOf="@+id/politician_name" />

        <ImageView
            android:contentDescription="@string/www_icon"
            android:id="@+id/wwwIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
            app:layout_constraintTop_toBottomOf="@+id/office_name"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:contentDescription="@string/facebook_icon"
            android:id="@+id/facebookIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
            app:layout_constraintTop_toTopOf="@+id/wwwIcon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:contentDescription="@string/twitter_icon"
            android:id="@+id/twitterIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/facebookIcon"
            app:srcCompat="@drawable/ic_twitter" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>